# electronics-shop-project

./: pyproject.toml
homework-4/: main.py
homework-5/: main.py
homework-6/: main.py
src/: item.py  items_3.csv  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
